@@ -19,7 +19,6 @@
  */
 package io.jenetics.ext.engine;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Spliterator;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -206,7 +205,7 @@ public final class CyclicEngine<
 	@SafeVarargs
 	public static <G extends Gene<?, G>, C extends Comparable<? super C>>
 	CyclicEngine<G, C> of(final EvolutionStreamable<G, C>... engines) {
-		return new CyclicEngine<>(Arrays.asList(engines));
+		return new CyclicEngine<>(List.of(engines));
 	}
 
 }
